# occupation-loss-predictor

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  nginx.conf  package-lock.json  pylint.rc
.circleci/: config.yml
api/: README.md
apps/automation/: cypress.config.ts  package-lock.json  package.json
apps/automation/cypress/: tsconfig.json
apps/automation/cypress/e2e/: frontend.spec.tsx
apps/backend/: .gitignore  Dockerfile  README.md  entry.py  pyproject.toml  tox.ini
apps/backend/invasion/: __init__.py  config.py
apps/backend/invasion/admin/: base.py  mapper.py  models.py  service.py
apps/backend/invasion/base/: base.py  pagination.py  utils.py
apps/backend/invasion/db/: engine.py  models.py
apps/backend/invasion/forecasting/: service.py
apps/backend/invasion/integrations/: mapper.py  minfin.py
apps/backend/invasion/losses/: losses.py  models.py  router.py  service.py
apps/backend/invasion/losses/models/: domain.py  presentation.py
apps/backend/migrations/: README.md  env.py
apps/backend/migrations/versions/: 2_forecests.py
apps/backend/newsflow/: .gitignore  Dockerfile  credentials.json  entry.py  pyproject.toml  release.sh  tox.ini
apps/backend/newsflow/newsprocessor/: __init__.py  config.py  utils.py
apps/backend/newsflow/newsprocessor/firebase/: collection_names.py  models.py  repository.py  service.py
apps/backend/newsflow/newsprocessor/news/: models.py  service.py
apps/backend/newsflow/newsprocessor/postprocessing/: service.py
apps/backend/newsflow/newsprocessor/static/: index.html
apps/backend/newsflow/newsprocessor/syncer/: service.py
apps/backend/statshub/: .gitignore  alembic.ini  backup.sh  entry.py  pyproject.toml
apps/backend/statshub/invasion/: __init__.py  config.py
apps/backend/statshub/invasion/admin/: base.py  models.py  service.py
apps/backend/statshub/invasion/base/: pagination.py
apps/backend/statshub/invasion/db/: __init__.py
apps/backend/statshub/invasion/losses/: losses.py  router.py
apps/backend/statshub/migrations/versions/: 1_init.py
apps/backend/statshub/tests/: conftest.py
apps/backend/tests/: conftest.py
apps/frontend/: .env.dev  Dockerfile  README.md  env_sample.txt  middleware.ts  next-i18next.config.js  next-sitemap.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/frontend/api/: apiUrl.js  apiUrl.tsx
apps/frontend/components/breadcrumbs/: index.tsx
apps/frontend/components/faq/: index.tsx
apps/frontend/components/footer/: index.tsx
apps/frontend/components/header/: index.tsx
apps/frontend/components/logo/: index.tsx
apps/frontend/components/losses_table/: index.tsx
apps/frontend/firebase/: index.tsx
apps/frontend/pages/: _app.tsx  index.tsx
apps/frontend/public/: robots.txt  sitemap-0.xml  sitemap.xml
apps/frontend/redux/: provider.tsx  store.tsx
apps/frontend/styles/: globals.scss  main_video.scss  theme.scss
apps/frontend/utils/: available_locales.ts  availdable_days.ts  category.tsx  locale.tsx
terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
terraform/.terraform/: terraform.tfstate
(+33 files in other folders)
