[tool.poetry]
name = "occupation-loss-predictor"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Boskin <kostyaboskin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
databases = "^0.5.3"
alembic = "^1.7.4"
uvicorn = "^0.15.0"
websockets = "^10.0"
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
pathlib = "^1.0.1"
sentry-sdk = "^1.4.3"
async-asgi-testclient = "^1.4.6"
pytest = "^6.2.5"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"
twilio = ">=6.17.0"
pydantic = {extras = ["email"], version = "^1.9.2"}
pyairtable = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
