[tool.poetry]
name = "invasion"
version = "1.0"
description = ""
authors = ["Kostiantyn Boskin <kostyaboskin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
fastapi = "^0.104.1"
SQLAlchemy = { version = "2.0.23", extras = ["asyncio"] }
uvicorn = "^0.24.0"
websockets = "^10.0"
passlib = "^1.7.4"
pathlib = "^1.0.1"
sentry-sdk = "^1.4.3"
async-asgi-testclient = "^1.4.6"
pytest = "^6.2.5"
pydantic = {extras = ["email"], version = "^1.9.2"}
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.3"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
fastapi-utils-sqlalch2 = "^0.3.0"
flake8 = "^6.1.0"
cryptography = "^41.0.7"
pycryptodome = "^3.19.0"
pycryptodomex = "^3.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
